# clima-cast

./: Readme.md
gateway/: go.mod  go.sum  main.go
gateway/controllers/: weather.go
gateway/metrics/: metrics.go
gateway/middlewares/: connections.go
gateway/models/: capital_weather.go
gateway/weather/: weather.go
gateway/weather_proto/: weather.pb.go  weather_grpc.pb.go
protobufs/: weather.proto
provisioning/: docker-compose-infra.yml  docker-compose-monitoring.yml  docker-compose-services.yml
provisioning/monitoring/telegraf/: telegraf.conf
provisioning/services/gateway/: Dockerfile
provisioning/services/nginx/: nginx.conf
provisioning/services/scraper/: Dockerfile
provisioning/services/weather/: Dockerfile
scraper/: main.py  pyproject.toml  weather_pb2.py  weather_pb2_grpc.py
weather/: main.py  pyproject.toml  weather_pb2.py  weather_pb2_grpc.py
weather/app/: api.py  app.py  elastic.py  mongo.py  settings.py
weather/search/: repository.py  schema.py
weather/services/: weather_crud.py
weather/storage/: repositories.py  schemas.py
